--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-25 Tue 08:46]
+#+CAPTION: Clock summary at [2017-07-25 Tue 18:31]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:04* |       |      | 100.0 |
+| *Total time*                                                                | *13:45* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:04   |       |      | 100.0 |
-| Active                                                                      |         | 13:04 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |   9.9 |
-| COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.9 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  28.2 |
-| STARTED Add meta-type support to yarn                                       |         |       | 6:17 |  48.1 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   6.0 |
-| STARTED Allow logging during initialisation                                 |         |       | 0:35 |   4.5 |
+| Stories                                                                     | 13:45   |       |      | 100.0 |
+| Active                                                                      |         | 13:45 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |   9.5 |
+| COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.8 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  26.8 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   9.2 |
+| STARTED Add meta-type support to yarn                                       |         |       | 6:17 |  45.7 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   5.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -122,6 +122,22 @@ Tasks:
 - use the traversal instead of rolling our own loop.
 - validate injected types too.
 - add validation for meta-model types.
+
+*** COMPLETED Allow logging during initialisation                     :story:
+    CLOSED: [2017-07-25 Tue 18:31]
+    CLOCK: [2017-07-25 Tue 17:50]--[2017-07-25 Tue 18:31] =>  0:41
+    CLOCK: [2017-07-25 Tue 08:11]--[2017-07-25 Tue 08:46] =>  0:35
+
+At present we assume the log has not been initialised during
+initialisation. The only reason for this is with unit testing because
+each test initialises the log differently. However, one simple way
+around this is to have a log file for the entire test suite and
+separate log files for each test as we have now. Initialisation
+logging would go in this main file.
+
+This is a bit of a more pressing issue because we now make use of name
+builders during initialisation in order to setup the formatter's
+meta-type.
 
 *** STARTED Add meta-type support to yarn                             :story:
     CLOCK: [2017-07-25 Tue 08:05]--[2017-07-25 Tue 08:11] =>  0:06
@@ -220,20 +236,6 @@ Notes:
   index. Perhaps we should have a struct that aggregates both:
   archetype locations for meta-type? Or kernel can just return a
   =std::pair=.
-
-*** STARTED Allow logging during initialisation                       :story:
-    CLOCK: [2017-07-25 Tue 08:11]--[2017-07-25 Tue 08:46] =>  0:35
-
-At present we assume the log has not been initialised during
-initialisation. The only reason for this is with unit testing because
-each test initialises the log differently. However, one simple way
-around this is to have a log file for the entire test suite and
-separate log files for each test as we have now. Initialisation
-logging would go in this main file.
-
-This is a bit of a more pressing issue because we now make use of name
-builders during initialisation in order to setup the formatter's
-meta-type.
 
 *** Rename transformers to adapters                                   :story:
 
