--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-25 Tue 18:31]
+#+CAPTION: Clock summary at [2017-07-25 Tue 23:25]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:45* |       |      | 100.0 |
+| *Total time*                                                                | *16:00* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:45   |       |      | 100.0 |
-| Active                                                                      |         | 13:45 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |   9.5 |
-| COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.8 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  26.8 |
-| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   9.2 |
-| STARTED Add meta-type support to yarn                                       |         |       | 6:17 |  45.7 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   5.7 |
+| Stories                                                                     | 16:00   |       |      | 100.0 |
+| Active                                                                      |         | 16:00 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |   8.1 |
+| COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.7 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  23.0 |
+| COMPLETED Allow logging during initialisation                               |         |       | 1:16 |   7.9 |
+| STARTED Add meta-type support to yarn                                       |         |       | 8:32 |  53.3 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   4.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -140,7 +140,10 @@ builders during initialisation in order to setup the formatter's
 meta-type.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-25 Tue 23:06]--[2017-07-25 Tue 23:25] =>  0:19
+    CLOCK: [2017-07-25 Tue 22:15]--[2017-07-25 Tue 23:06] =>  0:51
     CLOCK: [2017-07-25 Tue 08:05]--[2017-07-25 Tue 08:11] =>  0:06
+    CLOCK: [2017-07-23 Sun 18:31]--[2017-07-23 Sun 19:36] =>  1:05
     CLOCK: [2017-07-23 Sun 18:12]--[2017-07-23 Sun 18:30] =>  0:18
     CLOCK: [2017-07-23 Sun 17:56]--[2017-07-23 Sun 18:11] =>  0:15
     CLOCK: [2017-07-23 Sun 17:35]--[2017-07-23 Sun 17:56] =>  0:21
