--- a/doc/agile/v1/sprint_backlog_04.org
+++ b/doc/agile/v1/sprint_backlog_04.org
@@ -14,18 +14,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-08-04 Fri 17:37]
+#+CAPTION: Clock summary at [2017-08-06 Sun 22:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:00* |       |      | 100.0 |
+| *Total time*                                                                | *13:44* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:00   |       |      | 100.0 |
-| Active                                                                      |         | 10:00 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   5.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:13 |   2.2 |
-| COMPLETED Use shared pointers in all models                                 |         |       | 6:22 |  63.7 |
-| COMPLETED Update repository in yarn.dia to use pointers                     |         |       | 2:50 |  28.3 |
+| Stories                                                                     | 13:44   |       |      | 100.0 |
+| Active                                                                      |         | 13:44 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   4.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:13 |   1.6 |
+| COMPLETED Use shared pointers in all models                                 |         |       | 6:22 |  46.4 |
+| COMPLETED Update repository in yarn.dia to use pointers                     |         |       | 2:50 |  20.6 |
+| STARTED Create an exogenous model                                           |         |       | 3:44 |  27.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -127,6 +128,102 @@ Tasks:
 - create two maps for modules and parent names in context, delete existing maps.
 - delete selector.
 
+*** STARTED Create an exogenous model                                 :story:
+    CLOCK: [2017-08-06 Sun 21:02]--[2017-08-06 Sun 22:34] =>  1:32
+    CLOCK: [2017-08-06 Sun 11:41]--[2017-08-06 Sun 13:53] =>  2:12
+
+At present we are allowing the frontends to directly create
+intermediate models. However, this doesn't make a lot of sense: there
+are many properties in the intermediate models which should not be
+touched by the frontends. We should have a specific model that has
+only the properties that can be set by the frontends -
+=exogenous_model=. The exogenous model chain is then responsible for
+converting it into an intermediate model.
+
+Tasks:
+
+- create the exogenous model with the required attributes. Add a root
+  module, remove model name. All containers should be lists of a pair
+  of scribble group to concrete element.
+- move annotations transform to exogenous chain. Add a transform to
+  update element names by reading model modules and external modules.
+- drop scribble groups from intermediate model.
+- add an adaptor to convert from exogenous model to intermediate
+  model.
+- use some kind of reference to figure out where to place the
+  documentation of a module. We can't use the IDs any longer. We could
+  simply remember the list iterators. Since we are only pushing back
+  into the list, the iterators should remain valid. However, for this
+  to work we need to add support to iterators in dogen or manually
+  create the context/repository.
+- Refactor yarn.dia, splitting out the model from the repository and
+  renaming repository to context.
+
+Notes:
+
+- we need a completely different annotations transform. In the new
+  world, scribble updating and annotation updating are done in one go
+  by the updater, who has the annotation group as state. The annotation
+  classes need to be updated to take in just one scribble group rather
+  than a map. The updater needs to be a regular element visitor. The
+  transform runs on the exogenous model.
+- repository in yarn.dia must not rely on qualified names for lookups;
+  instead it must have a pointer to the element, which is known to be
+  owned by the model. To make life easier this could be a shared
+  pointer with a custom deleter.
+- if we changed the graph adding a relationship between the note and
+  the package such that the package is always processed after the
+  notes it contains; and if we created a map of child to note,
+  including a special entry for the "root note"; we could then merge
+  the processed objects of the package and the note. This would then
+  result in a consistent interface for the transformer. Actually this
+  must already be occurring since we are updating the documentation of
+  an existing module; however, the order must be in reverse -
+  i.e. first the package, then the note. We should really do the note
+  first then the package. We can simply create a map of ID ->
+  processed object; we then remember the module processed object. When
+  the note appears we look up the module and merge it.
+
+Steps:
+
+- update scribble group with stereotypes.
+- convert scribble group into annotation group.
+- process element annotation.
+- process attribute annotations, if stateful.
+
+*** Remove support for upsilon                                        :story:
+
+It seems we will no longer be using upsilon, so we should remove it as
+its adding to the maintenance costs. If required in the future we can
+always resurrect it.
+
+This will also hopefully free up some time in the build machine,
+solving the amount of red builds we get due to time outs.
+
+*** Rename yarn object types in yarn.dia                              :story:
+
+These are not really object types. We could name them perhaps element
+types?
+
+*** Change order of includes according to Lakos major design rule     :story:
+
+Lakos says:
+
+#+begin_quote
+The .c file of every component should include its own .h file as the
+first substantive line of code.
+#+end_quote
+
+We decided to include it as the last line. However, Lakos approach has
+the side-effect of automatically detecting headers that are missing
+includes. We used to do this manually by generating =.cpp= files that
+just included the header but then had to remove it because it was
+slowing down compilation. With Lakos approach we get the best of both
+worlds.
+
+We need to also update the generated code to follow this
+approach. This will require some thinking.
+
 *** Rename =meta_type= in JSON                                        :story:
 
 Now we have meta-names we should use the same terminology for JSON
@@ -176,55 +273,6 @@ populate the external modules inside of yarn pre-processing.
 One thing to bear in mind is that we need to trash all containers and
 re-insert all elements, because the IDs will change as part of this
 exercise.
-
-*** Create an exogenous model                                         :story:
-
-At present we are allowing the frontends to directly create
-intermediate models. However, this doesn't make a lot of sense: there
-are many properties in the intermediate models which should not be
-touched by the frontends. We should have a specific model that has
-only the properties that can be set by the frontends -
-=exogenous_model=. The exogenous model chain is then responsible for
-converting it into an intermediate model.
-
-Tasks:
-
-- create the exogenous model with the required attributes. Add a root
-  module, remove model name. All containers should be lists of a pair
-  of scribble group to concrete element.
-- move annotations transform to exogenous chain. Add a transform to
-  update element names by reading model modules and external modules.
-- drop scribble groups from intermediate model.
-- add an adaptor to convert from exogenous model to intermediate
-  model.
-- use some kind of reference to figure out where to place the
-  documentation of a module. We can't use the IDs any longer. We could
-  simply remember the list iterators. Since we are only pushing back
-  into the list, the iterators should remain valid. However, for this
-  to work we need to add support to iterators in dogen or manually
-  create the context/repository.
-- Refactor yarn.dia, splitting out the model from the repository and
-  renaming repository to context.
-
-Notes:
-
-- we need a completely different annotations transform. In the new
-  world, scribble updating and annotation updating are done in one go
-  by the updater, who has the annotation group as state. The annotation
-  classes need to be updated to take in just one scribble group rather
-  than a map. The updater needs to be a regular element visitor. The
-  transform runs on the exogenous model.
-- repository in yarn.dia must not rely on qualified names for lookups;
-  instead it must have a pointer to the element, which is known to be
-  owned by the model. To make life easier this could be a shared
-  pointer with a custom deleter.
-
-Steps:
-
-- update scribble group with stereotypes.
-- convert scribble group into annotation group.
-- process element annotation.
-- process attribute annotations, if stateful.
 
 *** Enable kernel directories trait is on quilt                       :story:
 
